--- a/ApiCatalogoJogos/appsettings.json
+++ b/ApiCatalogoJogos/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-     "Default": "Server=(localdb)\\mssqllocaldb;Database=CatalogoJogos;Integrated Security=True"
+     "Default": "Server=(localdb)\\mssqllocaldb;Database=ApiCatalogoJogos;Integrated Security=True"
   }
 }
